# cryptography

./: .azure-pipelines.yml  .coveragerc  .gitattributes  .gitignore  .mention-bot  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING  CONTRIBUTING.rst  Cargo.toml  Jenkinsfile  LICENSE  LICENSE.APACHE  MANIFEST.iM  MANIFEST.in  README.rst  aes-gcm.py  aes.py  azure-pipelines.yml  ci-constraints-requirements.txt  codecov.yml  conftest.py  create-self-signed.py  dev-requirements.txt  dh_repro.c  docker_build.py  groups  mypy.ini  noxfile.py  project.config  pyproject.toml  pytest.ini  release.py  requirements-dev.txt  rtd-requirements.txt  rustfmt.toml  setup.cfg  (+3 more)
src/rust/: Cargo.toml  build.rs
src/rust/.cargo/: config
src/rust/cryptography-cffi/: Cargo.toml  build.rs
src/rust/cryptography-cffi/src/: lib.rs
src/rust/cryptography-crypto/: Cargo.toml
src/rust/cryptography-crypto/src/: constant_time.rs  encoding.rs  lib.rs  pbkdf1.rs  pkcs12.rs
src/rust/cryptography-keepalive/: Cargo.toml
src/rust/cryptography-keepalive/src/: lib.rs
src/rust/cryptography-key-parsing/: Cargo.toml  build.rs
src/rust/cryptography-key-parsing/src/: dsa.rs  ec.rs  lib.rs  pbe.rs  pem.rs  pkcs8.rs  rsa.rs  spki.rs  utils.rs
src/rust/cryptography-openssl/: Cargo.toml  build.rs
src/rust/cryptography-openssl/src/: aead.rs  cmac.rs  fips.rs  hmac.rs  lib.rs  mldsa.rs  mlkem.rs  poly1305.rs  rand.rs  utils.rs
src/rust/cryptography-x509/: Cargo.toml
src/rust/cryptography-x509-validation/: Cargo.toml
src/rust/cryptography-x509-validation/src/: backend.rs  certificate.rs  lib.rs  ops.rs  trust_store.rs  types.rs
src/rust/cryptography-x509-verification/: Cargo.toml
src/rust/cryptography-x509-verification/src/: certificate.rs  lib.rs  ops.rs  revocation.rs  trust_store.rs  types.rs
src/rust/cryptography-x509/src/: certificate.rs  common.rs  crl.rs  csr.rs  ec_constants.rs  extensions.rs  lib.rs  name.rs  ocsp_req.rs  ocsp_resp.rs  oid.rs  pkcs12.rs  pkcs7.rs  pkcs8.rs
src/rust/src/: asn1.rs  buf.rs  chunked_encryption.rs  cobblestone.rs  error.rs  exceptions.rs  intern.rs  lib.rs  ocsp.rs  oid.rs  padding.rs  pkcs12.rs  pkcs7.rs  pool.rs  serialization.rs  test_support.rs  types.rs  utils.rs  x509.rs
src/rust/src/asn1_exp/: asn1.rs  encode.rs  types.rs
src/rust/src/backend/: aead.rs  cipher_registry.rs  ciphers.rs  cmac.rs  dh.rs  dsa.rs  ec.rs  ed25519.rs  ed448.rs  hashes.rs  hmac.rs  hpke.rs  kdf.rs  keys.rs  keywrap.rs  mldsa.rs  mldsa44.rs  mldsa65.rs  mlkem.rs  mlkem768_x25519.rs  mod.rs  poly1305.rs  rand.rs  rsa.rs  utils.rs  x25519.rs  x448.rs  xofhash.rs
src/rust/src/declarative_asn1/: asn1.rs  decode.rs  encode.rs  mod.rs  types.rs
src/rust/src/pyopenssl/: error.rs  mod.rs  ssl.rs
src/rust/src/x509/: certificate.rs  common.rs  crl.rs  csr.rs  extensions.rs  mod.rs  ocsp.rs  ocsp_req.rs  ocsp_resp.rs  oid.rs  sct.rs  sign.rs  verify.rs
src/rust/test_data/: mldsa44_priv.der
vectors/: MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
vectors/cryptography/vectors/: __about__.py  __init__.py
vectors/cryptography_vectors/: __about__.py  __init__.py
vectors/cryptography_vectors/CMAC/: nist-800-38b-3des.txt  nist-800-38b-aes192.txt  rfc4493-aes128.txt  rfc4493.txt
vectors/cryptography_vectors/HPKE/: go-shake128-vectors.json  hpke-pq-test-vectors.json
vectors/cryptography_vectors/KDF/: NIST-800-108-counterkdf-SHA1.txt  NIST-800-108-counterkdf-SHA224.txt  NIST-800-108-counterkdf-SHA256.txt  NIST-800-108-counterkdf-SHA512.txt  ansx963_2001.txt  argon2d.txt  argon2i.txt  argon2id.txt  hkdf-generated.txt  nist-800-108-KBKDF-CTR.txt  nist-800-108-counterkdf-SHA224.txt  nist-800-108-counterkdf-SHA256.txt  nist-800-108-counterkdf-SHA512.txt  rfc-6070-PBKDF2-SHA1.txt
vectors/cryptography_vectors/chunked-encryption/: vectors.json
vectors/cryptography_vectors/ciphers/: chacha20poly1305.txt
vectors/cryptography_vectors/fernet/: generate.json  generate_192.json  generate_256.json  verify.json  verify_192.json  verify_256.json
vectors/cryptography_vectors/keywrap/: kwp_botan.txt
vectors/cryptography_vectors/nonces/: nonces.json
vectors/cryptography_vectors/pkcs12/: cert-aes256cbc-no-key.p12  cert-key-aes256cbc.p12  cert-none-key-none.p12  cert-rc2-key-3des.p12  java-truststore.p12  name-1-no-pwd.p12  name-1-pwd.p12  name-2-3-no-pwd.p12  name-2-3-pwd.p12  name-2-no-pwd.p12  name-2-pwd.p12  name-3-no-pwd.p12  name-3-pwd.p12  name-all-no-pwd.p12  name-all-pwd.p12  name-unicode-no-pwd.p12  name-unicode-pwd.p12  no-cert-key-aes256cbc.p12  no-cert-name-2-no-pwd.p12  no-cert-name-2-pwd.p12  no-cert-name-3-no-pwd.p12  no-cert-name-3-pwd.p12  no-cert-name-all-no-pwd.p12  no-cert-name-all-pwd.p12  no-cert-name-unicode-no-pwd.p12  no-cert-name-unicode-pwd.p12  no-cert-no-name-no-pwd.p12  no-cert-no-name-pwd.p12  no-name-no-pwd.p12  no-name-pwd.p12  no-password.p12
vectors/cryptography_vectors/pkcs7/: amazon-roots.der  amazon-roots.p7b  ascii-san.pem  authenticode.der  ca.pem  ca_non_ascii_san.pem  enveloped-aes-192-cbc.pem  enveloped-aes-256-cbc.pem  enveloped-no-content.der  enveloped-rsa-oaep.pem  enveloped-triple-des.pem  enveloped.pem  isrg.pem  rsa_key.pem  signature-empty-certs.der  signed-opaque.msg  verify_cert.pem  verify_key.pem
vectors/cryptography_vectors/poly1305/: rfc7539.txt
vectors/cryptography_vectors/x509/: alternate-rsa-sha1-oid.pem  badasn1time.pem  badssl-sct-anonymous-sig.der  badssl-sct-none-hash.der  badssl-sct.pem  belgian-eid-invalid-visiblestring.pem  bigoid.pem  cryptography-scts-tbs-precert.der  cryptography-scts.pem  cryptography.io.chain.pem  cryptography.io.chain_with_garbage.pem  cryptography.io.old_header.pem  cryptography.io.pem  cryptography.io.precert.pem  cryptography.io.repeated_twice.pem  cryptography.io.with_garbage.pem  cryptography.io.with_headers.pem  department-of-state-root.pem  e-trust.ru.der  ekucrit-testuser-cert.pem  gbcs_supplier_ds.pem  limbo.json  san_x400address.der  scottishpower-bitstring-dn.pem  tls-feature-ocsp-staple.pem  utf8-dnsname.pem  wosign-bc-invalid.pem
(+3369 files in other folders)
