[workspace]
resolver = "2"
members = [
    "src/rust/",
    "src/rust/cryptography-cffi",
    "src/rust/cryptography-crypto",
    "src/rust/cryptography-keepalive",
    "src/rust/cryptography-key-parsing",
    "src/rust/cryptography-openssl",
    "src/rust/cryptography-x509",
    "src/rust/cryptography-x509-verification",
]

[workspace.package]
version = "0.1.0"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.74.0"
license = "Apache-2.0 OR BSD-3-Clause"

[workspace.dependencies]
asn1 = { version = "0.21.3", default-features = false }
pyo3 = { version = "0.25", features = ["abi3"] }
pyo3-build-config = { version = "0.25" }
openssl = "0.10.73"
openssl-sys = "0.9.108"

[profile.release]
overflow-checks = true
