[workspace]
resolver = "2"
members = [
    "src/rust/",
    "src/rust/cryptography-cffi",
    "src/rust/cryptography-crypto",
    "src/rust/cryptography-keepalive",
    "src/rust/cryptography-key-parsing",
    "src/rust/cryptography-openssl",
    "src/rust/cryptography-x509",
    "src/rust/cryptography-x509-verification",
]

[workspace.package]
version = "0.50.0-dev1"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.83.0"
license = "Apache-2.0 OR BSD-3-Clause"

[workspace.dependencies]
asn1 = { version = "0.24.1", default-features = false }
base64 = "0.23"
cc = "1.2.63"
cfg-if = "1"
foreign-types = "0.3"
foreign-types-shared = "0.1"
openssl = "0.10.80"
openssl-sys = "0.9.116"
pem = { version = "3", default-features = false }
pyo3 = { version = "0.29", features = ["abi3", "abi3t"] }
pyo3-build-config = { version = "0.29" }
self_cell = "1"

[profile.release]
overflow-checks = true
