[metadata]
name = cryptography_vectors
version = attr: cryptography_vectors.__version__
description = Test vectors for the cryptography package.
license = BSD or Apache License, Version 2.0
url = https://github.com/pyca/cryptography
author = The Python Cryptographic Authority and individual contributors
author_email = cryptography-dev@python.org


[options]
zip_safe = False
include_package_data = True
packages = find:


[bdist_wheel]
universal = 1
