[workspace.package]
version = "0.1.0"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.65.0"

[package]
name = "cryptography-rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
once_cell = "1"
cfg-if = "1"
pyo3 = { version = "0.22.2", features = ["abi3"] }
asn1 = { version = "0.16.2", default-features = false }
cryptography-cffi = { path = "cryptography-cffi" }
cryptography-keepalive = { path = "cryptography-keepalive" }
cryptography-key-parsing = { path = "cryptography-key-parsing" }
cryptography-x509 = { path = "cryptography-x509" }
cryptography-x509-verification = { path = "cryptography-x509-verification" }
cryptography-openssl = { path = "cryptography-openssl" }
pem = { version = "3", default-features = false }
openssl = "0.10.65"
openssl-sys = "0.9.103"
foreign-types-shared = "0.1"
self_cell = "1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "cryptography_rust"
crate-type = ["cdylib"]

[profile.release]
overflow-checks = true

[workspace]
members = [
    "cryptography-cffi",
    "cryptography-keepalive",
    "cryptography-key-parsing",
    "cryptography-openssl",
    "cryptography-x509",
    "cryptography-x509-verification",
]
