[package]
name = "cryptography-rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
asn1.workspace = true
base64.workspace = true
cfg-if.workspace = true
cryptography-cffi = { path = "cryptography-cffi" }
cryptography-crypto = { path = "cryptography-crypto" }
cryptography-keepalive = { path = "cryptography-keepalive" }
cryptography-key-parsing = { path = "cryptography-key-parsing" }
cryptography-openssl = { path = "cryptography-openssl" }
cryptography-x509 = { path = "cryptography-x509" }
cryptography-x509-verification = { path = "cryptography-x509-verification" }
foreign-types-shared.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
pem.workspace = true
pyo3.workspace = true
self_cell.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true

[lib]
name = "cryptography_rust"
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(CRYPTOGRAPHY_OPENSSL_309_OR_GREATER)', 'cfg(CRYPTOGRAPHY_OPENSSL_320_OR_GREATER)', 'cfg(CRYPTOGRAPHY_OPENSSL_330_OR_GREATER)', 'cfg(CRYPTOGRAPHY_OPENSSL_350_OR_GREATER)', 'cfg(CRYPTOGRAPHY_IS_LIBRESSL)', 'cfg(CRYPTOGRAPHY_IS_BORINGSSL)', 'cfg(CRYPTOGRAPHY_IS_AWSLC)', 'cfg(CRYPTOGRAPHY_BUILD_OPENSSL_NO_LEGACY)', 'cfg(CRYPTOGRAPHY_OSSLCONF, values("OPENSSL_NO_IDEA", "OPENSSL_NO_CAST", "OPENSSL_NO_BF", "OPENSSL_NO_CAMELLIA", "OPENSSL_NO_SEED", "OPENSSL_NO_SM4", "OPENSSL_NO_RC4"))'] }
