[package]
name = "cryptography-cffi"
version = "0.1.0"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.65.0"

[dependencies]
pyo3 = { version = "0.21.2", features = ["abi3"] }
openssl-sys = "0.9.102"

[build-dependencies]
cc = "1.0.97"
