[package]
name = "cryptography-cffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
pyo3 = { version = "0.22.4", features = ["abi3"] }
openssl-sys = "0.9.103"

[build-dependencies]
cc = "1.1.30"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(python_implementation, values("CPython", "PyPy"))'] }
