[package]
name = "cryptography-cffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pyo3.workspace = true
openssl-sys.workspace = true

[build-dependencies]
cc = "1.2.27"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(python_implementation, values("CPython", "PyPy"))'] }
