[package]
name = "cryptography-openssl"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if = "1"
openssl = "0.10.65"
ffi = { package = "openssl-sys", version = "0.9.101" }
foreign-types = "0.3"
foreign-types-shared = "0.1"
