[package]
name = "cryptography-x509-verification"
version = "0.1.0"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.65.0"

[dependencies]
asn1 = { version = "0.16.2", default-features = false }
cryptography-x509 = { path = "../cryptography-x509" }
cryptography-key-parsing = { path = "../cryptography-key-parsing" }
once_cell = "1"

[dev-dependencies]
pem = { version = "3", default-features = false }
