[package]
name = "cryptography-x509-verification"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
asn1.workspace = true
cryptography-x509 = { path = "../cryptography-x509" }
pkcs1 = "0.7.5"

[dev-dependencies]
pem.workspace = true
